# DLVHEX-MongoDB

./: AUTHORS  Makefile  Makefile.in  README  config.status  configure  configure.ac  configure.ac~  libtool
autom4te.cache/: output.0  output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
example/: .mongo_query_test.txt.swp  a.txt  basis_test.txt  calendar.txt  json_test.txt  mapreduce_test.txt  mongo-test.txt  mongo-test.txt~  mongo_query_test.txt  sleep.txt  test  test.cpp
include/: ConfigFile.h  ConfigFile.h~  Makefile  Makefile.am  Makefile.in  MongoArrayAtom.h  MongoAtom.h~  MongoInsertAtom.h  MongoInsertAtom.h~  MongoJSONAtom.h  MongoMapReduceAtom.h  MongoPlugin.h  MongoQueryAtom.h  config.cfg~  config.h  config.h.in  config.h.in~
src/: ConfigFile.cpp  ConfigFile.cpp~  ConfigFile.lo  Makefile  Makefile.am  Makefile.in  MongoArrayAtom.cpp  MongoArrayAtom.lo  MongoAtom.cpp~  MongoAtom.lo  MongoInsertAtom.cpp  MongoInsertAtom.cpp~  MongoInsertAtom.lo  MongoJSONAtom.cpp  MongoJSONAtom.lo  MongoMapReduceAtom.cpp  MongoMapReduceAtom.lo  MongoPlugin.cpp  MongoPlugin.lo  MongoQueryAtom.cpp  MongoQueryAtom.cpp~  MongoQueryAtom.lo  libdlvhexplugin-mongo.la  âempvimfile
src/.deps/: ConfigFile.Plo  MongoArrayAtom.Plo  MongoAtom.Plo  MongoInsertAtom.Plo  MongoJSONAtom.Plo  MongoMapReduceAtom.Plo  MongoPlugin.Plo  MongoQueryAtom.Plo
src/.libs/: libdlvhexplugin-mongo.la  libdlvhexplugin-mongo.lai
